--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,8 +1,17 @@
+h1 {
+    font-family: Roboto, sans-serif;
+    text-align: center;
+}
+
+body {
+    font-family: 'Courier New', Courier, monospace;
+}
+
 p {
     border-width: 10px;
     border-color: lightgreen;
     border-style: ridge;
-    margin: 5px
+    margin: 5px;
 }
 
 span {
